Attemp 3 to fix weird header behaviour on mobile

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,5 +1,6 @@
 header
 {
+    position: relative;
     display: flex;
     justify-content: center;
     background-color: transparent;
@@ -111,7 +112,7 @@ header nav svg
         list-style: none;
         display: flex;
         width: 100%;
-        height: 100vh; /* Potencijalni toFix */
+        height: 100dvh;
         transition: all .3s;
         z-index: 999;
         transition: all .3s;
